@@ -1,3 +1,7 @@
+28 March 2013: Wouter
+	- Make reverse zones easier by documenting the nodefault statements
+	  commented-out in the example config file.
+
 26 March 2013: Wouter
 	- more fixes to lookup3.c endianness detection.
 
